--- a/TechStore.DALEF/TechStore.DALEF.csproj
+++ b/TechStore.DALEF/TechStore.DALEF.csproj
@@ -16,4 +16,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TechStore.DAL\TechStore.DAL.csproj" />
+    <ProjectReference Include="..\TechStore.DTO\TechStore.DTO.csproj" />
+  </ItemGroup>
+
 </Project>
