--- a/TechStore/TechStore.csproj
+++ b/TechStore/TechStore.csproj
@@ -1,9 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TechStore.DAL\TechStore.DAL.csproj" />
+    <ProjectReference Include="..\TechStore.DTO\TechStore.DTO.csproj" />
+  </ItemGroup>
 
 </Project>
